# waffle

./: Cargo.toml  LICENSE  README.md  release-local
.github/workflows/: build-linux.yml  build-mac.yml  release-linux.yml  release-mac.yml
src/: main.rs
src/args/: bump_type.rs  cli.rs  mod.rs
src/diff/: diff_tools.rs  mod.rs
src/error/: error.rs  error_types.rs  mod.rs
src/output/: mod.rs  model.rs
src/toml_tools/: mod.rs  toml_funcs.rs  toml_serde.rs
src/workflow/: mod.rs  workflow.rs  workflow_tools.rs
src/wtoml/: mod.rs  toml_funcs.rs  toml_serde.rs
tests/: integration.rs
