[package]
name = "waffle"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
clap = { version = "4", features = ["derive", "cargo", "env", "unicode"] }
ansi_term = "0.12"
toml_edit = { version = "0.22.12", features = ["serde"] }
toml = "0.8.12"
similar="2"

[dev-dependencies]
pretty_assertions = "1"
assert_cmd = "2"
predicates="3"
